--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
-  <!--For loading manifestt-->
   <link rel="manifest" href="manifest.webmanifest" />
 
   <title>Budget Tracker</title>
@@ -45,18 +44,15 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="index.js"></script>
-
-  <!--Extra code to make db.js and serviceWorker function-->
-  <script src="/db.js"></script>
-  <script>
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => {
-        navigator.serviceWorker.register("service-worker.js").then (reg => {
-          console.log ("We found your service worker file!", reg);
-        });
-      });
-    }
+  <script src="indexDB.js"></script>
+  <script type="text/javascript">
+    (function () {
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./service-worker.js", { scope: "/" })
+          .then(() => console.log("Service Worker registered successfully."))
+          .catch(error => console.log("Service Worker registration failed:", error));
+      }
+    })();
   </script>
-
 </body>
 </html>
